WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233435
license comments in FontDescription.h and FontCascadeDescription.h have errors
https://bugs.webkit.org/show_bug.cgi?id=233435
Summary
license comments in FontDescription.h and FontCascadeDescription.h have errors
Cameron McCormack (:heycam)
Reported
2021-11-22 14:17:16 PST
Seemingly from a find/replace gone wrong.
Attachments
Patch
(2.22 KB, patch)
2021-11-22 14:19 PST
,
Cameron McCormack (:heycam)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron McCormack (:heycam)
Comment 1
2021-11-22 14:19:05 PST
Created
attachment 444981
[details]
Patch
EWS
Comment 2
2021-11-22 16:52:00 PST
Committed
r286122
(
244509@main
): <
https://commits.webkit.org/244509@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444981
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-22 16:52:25 PST
<
rdar://problem/85685806
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug