Fix some license find/replace errors https://bugs.webkit.org/show_bug.cgi?id=233435

Reviewed by Sam Weinig.

* platform/graphics/FontCascadeDescription.h:
* platform/graphics/FontDescription.h:



Canonical link: https://commits.webkit.org/244509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286122 268f45cc-cd09-0410-ab3c-d52691b4dbfc